--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
     .screen{
       width:min(430px, 100%);
       height:100svh;
-      padding:22px 22px calc(18px + env(safe-area-inset-bottom));
+      padding:18px 16px calc(18px + env(safe-area-inset-bottom)); /* ✅ 좌우 16px */
       display:flex;
       flex-direction:column;
     }
+
 
     /* ===== TOP (Tokyo + date) ===== */
     .hero{
